<!--Author: Vlada Shevtsova-->
<!--Date:   05-Mar-2019-->

<resources>
    <string name="app_name">Roshambo</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="draw">DRAW</string>
    <string name="rock_desc">rock</string>
    <string name="paper_desc">paper</string>
    <string name="scissors_desc">scissors</string>
    <string name="player_s_choice_desc">player\'s choice</string>
    <string name="win_lose_draw">WIN/LOSE/DRAW</string>
    <string name="games_choice_desc">games choice</string>
</resources>
